bugfix vor card overflow

--- a/main.css
+++ b/main.css
@@ -196,7 +196,7 @@ body {
     gap: var(--spacer-lg);
   }
   .testimonials__testimonial {
-    height: 14rem;
+    height: 20%;
   }
   .testimonials__testimonial:nth-of-type(2) {
     margin-top: 2rem;
